# sts2-modsync

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  build.rs  config.example.toml  set-manifest.example.json
.github/workflows/: ci.yml  release.yml
src/: config.rs  delta.rs  detect.rs  doctor.rs  github.rs  gui.rs  hashing.rs  icon.rs  launch.rs  lib.rs  loadcode.rs  logging.rs  main.rs  manager.rs  manifest.rs  modlist.rs  modsource.rs  modupdate.rs  nexus.rs  nxm.rs  profile.rs  publish.rs  signing.rs  sync.rs  torrent.rs  transport.rs  update.rs  util.rs
src/gui/: github_login.rs  job.rs  mod.rs  mods_tab.rs  profiles_tab.rs  publish_tab.rs  sync_tab.rs  widgets.rs
