[package]
name = "sts2-modsync"
version = "0.1.0"
edition = "2024"
description = "Detecta el install de Slay the Spire 2 (Steam o pirata) y sincroniza sets de mods de forma barata y rapida"

[dependencies]
anyhow = "1.0.102"
blake3 = { version = "1.8.5", features = ["rayon", "mmap"] }
directories = "6.0.0"
minisign-verify = "0.2.5"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
steamlocate = "2.1.0"
sysinfo = "0.39.3"
toml = "1.1.2"
walkdir = "2.5.0"

# --- FASE 2 (siguiente Claude Code) — descomentar al implementar transporte/GUI ---
# reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }
# tokio        = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
# futures-util = "0.3"
# tempfile     = "3"          # escritura atomica (temp + persist en el mismo volumen)
# zstd         = "0.13"       # comprimir transferencia
# eframe       = "0.31"       # GUI (forzar backend glow); egui viene incluido
# bita         = "0.14"       # FASE 3: delta intra-archivo del .pck (opcional)

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
