[package]
name = "sts2-modsync"
version = "1.14.1"
edition = "2024"
license = "MIT"
description = "Mod manager de Slay the Spire 2 (Steam o pirata) con sincronizacion de sets de mods barata y rapida"
default-run = "sts2-modsync"

[dependencies]
anyhow = "1.0.102"
blake3 = { version = "1.8.5", features = ["rayon", "mmap"] }
directories = "6.0.0"
eframe = { version = "0.34.3", default-features = false, features = ["glow", "default_fonts"], optional = true }
keyring = { version = "^3", features = ["windows-native"] }
librqbit = { version = "8.1.1", optional = true }
minisign = "0.9.1"
# Delta binario intra-archivo (bsdiff): un patch reconstruye el `.pck` nuevo desde el viejo, asi
# actualizar un mod no rebaja el `.pck` entero. Modulo `delta`; lo usan publish (genera) y sync
# (aplica + verifica BLAKE3 + fallback al full). Pure-Rust salvo `cdivsufsort` (C, MSVC ok).
qbsdiff = "1.4.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
rfd = "0.17.2"
self-replace = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
steamlocate = "2.1.0"
sysinfo = "0.39.3"
tokio = { version = "1.52.3", features = ["rt-multi-thread"], optional = true }
toml = "1.1.2"
trash = "5.2.6"
walkdir = "2.5.0"
zip = "8.6.0"

# reqwest (blocking + rustls) ya esta arriba: la descarga corre en el worker thread, asi
# que NO hace falta tokio/futures-util (evitamos toda la superficie async).
# FASE 3 (delta intra-`.pck`): HECHA con `qbsdiff` (bsdiff) — ver arriba. Pendiente opcional:
# zstd para comprimir el patch/transferencia.

# Registro de Windows: registrar el protocolo `nxm://` (handler de "Mod Manager Download" de Nexus)
# en HKCU (per-user, sin admin). Solo Windows; el resto del codigo lo usa gateado por `cfg(windows)`.
[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
# La GUI (eframe/egui) es opcional: asi `cargo build`/`cargo test` del core y la CLI
# siguen livianos. La GUI (binario publicado) incluye P2P.
gui = ["dep:eframe", "p2p"]
# P2P estilo torrent (librqbit + tokio). GATEADO: el core/CLI por default queda liviano y
# `cargo test` no arrastra tokio/red. Sin esta feature la sync usa solo HTTP (GitHubReleases).
p2p = ["dep:librqbit", "dep:tokio"]

# SINGLE-EXE: hay UN solo binario, `sts2-modsync` (src/main.rs, auto-descubierto). Con
# `--features gui` ese binario incluye la GUI y la abre sin argumentos; sin la feature es
# solo CLI (build liviano). Ya NO hay un binario `sts2-modsync-gui` aparte.
